--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
-name = "todos-rest"
+name = "rest"
 path = "src/bin/rest.rs"
+
+
+[[bin]]
+name = "migrate"
+path = "src/bin/migrate.rs"
 
 [dependencies]
 config = "0.11.0"
-dotenv = "0.15.0"
 serde = { version = "1.0.130", features = ["derive"] }
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
+r2d2 = "0.8.9"
+diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2"] }
